@@ -1,1 +1,2 @@
+---
 Repository: https://github.com/rehsack/MooX-Locale-Passthrough.git
